--- a/src/view/ModifyProduct.fxml
+++ b/src/view/ModifyProduct.fxml
@@ -31,6 +31,11 @@
                         </Label>
                     </children>
                 </TilePane>
+            <Label fx:id="warningLabel" textFill="#f40505">
+               <VBox.margin>
+                  <Insets left="100.0" top="50.0" />
+               </VBox.margin>
+            </Label>
                 <GridPane prefHeight="213.0" prefWidth="450.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.199951171875" minWidth="10.0" prefWidth="74.0000015258789" />
@@ -101,7 +106,6 @@
                 <Pane prefHeight="84.0" prefWidth="450.0">
                     <children>
                         <Button layoutX="333.0" layoutY="29.0" mnemonicParsing="false" onAction="#onAddButton" text="Add" />
-                  <Label fx:id="warningLabel3" layoutX="14.0" layoutY="33.0" textFill="#f40505" />
                     </children>
                 </Pane>
                 <TableView fx:id="associatedPartsTable2" prefHeight="200.0" prefWidth="200.0">
